--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
    <head>
       <title>Bio</title>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="trial.css"> 
+      <link rel="stylesheet" href="index.css"> 
      
    </head>
    <body>
