--- a/bio.html
+++ b/bio.html
@@ -3,21 +3,25 @@
    <head>
       <title>Bio</title>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="index.css"> 
+      <link rel="stylesheet" href="trial.css"> 
      
    </head>
    <body>
+     <section class="banner"> 
+        <h2> GithubWebsite (will insert photo later on)</h2>
+   </section>
        <nav>
-           <div><a href="home.html">Home</div>
+           <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
-           <div>Renaissance Art</div>
-           <div>Romanticism Art</div>
-           <div>Modern Art</div>
+           <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
+           <div><a href="RomanticismArt.html">Romanticism Art</a></div>
+           <div><a href="ModernArt">Modern Art</a></div>
        </nav>
-<div id="container">
+  
+<div id="container2">
          <h1> How do you do?</h1>
 <p>
-My name is An-Ru Cheng, and I am a junior at National Tsing Hua University, currently studying Foreign Languages and Literature. I set up this website as a project for my bilingual web design class, and I am going to share some classical artworks along with my interpretation of them on here.
+My name is An-Ru Cheng, and I am a junior at National Tsing Hua University, currently studying Foreign Languages and Literature. I set up this website as a project for my bilingual web design class, and I am going to share some classical artworks along with my interpretations of them on here.
 
  I grew up in Taipei and all my schools before university are within the same district, so home has always been my favorite safe place to be. However, I absolutely love travelling and experience different lifestyles, and I also like the unplanned surprises every trip brought about.  
    
