--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
    <head>
       <title>Bio</title>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="trial.css"> 
+      <link rel="stylesheet" href="index.css"> 
      
    </head>
    <body>
@@ -15,7 +15,7 @@
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
-           <div><a href="ModernArt">Modern Art</a></div>
+           <div><a href="ModernArt.html">Modern Art</a></div>
        </nav>
   
 <div id="container2">
