--- a/bio.html
+++ b/bio.html
@@ -7,19 +7,21 @@
      
    </head>
    <body>
-     <section class="banner"> 
-        <h2> GithubWebsite (will insert photo later on)</h2>
-   </section>
+
        <nav>
            <div><a href="home.html">Home</a></div>
            <div><a href="bio.html">Bio</a></div>
            <div><a href="RenaissanceArt.html">Renaissance Art</a></div>
            <div><a href="RomanticismArt.html">Romanticism Art</a></div>
            <div><a href="ModernArt.html">Modern Art</a></div>
+           <div><a href="Others.html">Others</a></div>
        </nav>
-  
+<h5>Hello! I'm AnRu</h5> <!--右邊側面的一行白色字-->
 <div id="container2">
-         <h1> How do you do?</h1>
+  <section id="books"><img src="books.jpg"></section>
+  <section id="bio">
+
+         <h4> How do you do?</h4>
 <p>
 My name is An-Ru Cheng, and I am a junior at National Tsing Hua University, currently studying Foreign Languages and Literature. I set up this website as a project for my bilingual web design class, and I am going to share some classical artworks along with my interpretations of them on here.
 
@@ -38,7 +40,7 @@ Growing up I have always love to draw and paint whenever I have free time, so yo
 
 藝術一直以來都很吸引我的一大原因是，我覺得藝術可以激起每個觀賞者的特定情緒，儘管我們對那件藝術品毫無了解，因此我希望透過介紹各種流派的作品，每個點進來的人都可以感受到與這個網站有著一絲連結。
 </p>
-
+</section>
        </div>
   </body>
 </html>
